--- a/src/app/actors/actors/actors.component.html
+++ b/src/app/actors/actors/actors.component.html
@@ -3,18 +3,17 @@
   <a href routerLink="/movies" routerLinkActive="is-active">Movies</a>
 </div>
 <h3>Yokoy actors</h3>
-<div class="filters" style="margin-bottom: 12px">
+<form [formGroup]="filterForm" class="filters" style="margin-bottom: 12px">
   <div class="search">
     <label for="search">Search: </label>
     <input
       type="text"
-      name="search"
+      formControlName="name"
       placeholder="Search"
-      (keyup)="onSearchChange($event)"
     />
   </div>
-  <button (click)="addNew()">Add</button>
-</div>
+  <button (click)="add()">Add</button>
+</form>
 <table>
   <thead>
     <tr>
