Changes to styling and moved files to local

--- a/src/app/actors/actors/actors.component.html
+++ b/src/app/actors/actors/actors.component.html
@@ -3,7 +3,7 @@
   <a href routerLink="/movies" routerLinkActive="is-active">Movies</a>
 </div>
 <h3>Yokoy actors</h3>
-<form [formGroup]="filterForm" class="filters" style="margin-bottom: 12px">
+<form [formGroup]="filterForm" class="filters">
   <div class="search">
     <label for="search">Search: </label>
     <input
