--- a/themes/yokoy-design-system/_variables.scss
+++ b/themes/yokoy-design-system/_variables.scss
@@ -4,7 +4,12 @@ e.g. branding color, fonts, spacings etc.
 **/
 
 // Brand colors
+$link-color: blue;
 $error-color: red;
+$gray-500: #aea8ac;
 
 // Typography
 $base-font-family: Roboto, "Helvetica Neue", sans-serif;
+
+// Spacer
+$unit: 0.25rem;
