Moved modal styling to theme

--- a/src/app/actors/actor-dialog/actor-dialog.component.html
+++ b/src/app/actors/actor-dialog/actor-dialog.component.html
@@ -1,4 +1,4 @@
-<div class="modal-content" style="padding: 20px">
+<div class="modal-content">
   <h2>Add new actor</h2>
   <form [formGroup]="formGroup">
     <input
