--- a/src/app/movies/movies/movies.component.html
+++ b/src/app/movies/movies/movies.component.html
@@ -4,7 +4,7 @@
 </div>
 <h3>Yokoy movies</h3>
 <div class="table-header">
-  <form [formGroup]="filterForm" class="filters" style="margin-bottom: 12px">
+  <form [formGroup]="filterForm" class="filters">
     <input
       type="text"
       formControlName="title"
