--- a/src/app/movies/movie-dialog/movie-dialog.component.html
+++ b/src/app/movies/movie-dialog/movie-dialog.component.html
@@ -1,4 +1,4 @@
-<div class="modal-content" style="padding: 20px">
+<div class="modal-content">
   <h2 *ngIf="!data.movie?.id">Add new movie</h2>
   <h2 *ngIf="data.movie?.id">Edit movie with id = {{ data.movie.id }}</h2>
 
