Added validation message

--- a/src/app/movies/helpers/movie-dialog/movie-dialog.component.html
+++ b/src/app/movies/helpers/movie-dialog/movie-dialog.component.html
@@ -2,24 +2,33 @@
   <h2 *ngIf="!data.movie?.id">Add new movie</h2>
   <h2 *ngIf="data.movie?.id">Edit movie with id = {{ data.movie.id }}</h2>
 
-  <form [formGroup]="formGroup">
-    <input
-      placeholder="title"
-      type="text"
-      formControlName="title"
-      [class.error]="submitted && formGroup.get('title')?.errors"
-    />
-    <input
-      placeholder="year"
-      type="number"
-      formControlName="year"
-      [class.error]="submitted && formGroup.get('year')?.errors"
-    />
-    <select multiple placeholder="actors" formControlName="actors">
-      <option value="" disabled selected>Select actors</option>
-      <option *ngFor="let a of actors" [value]="a.name">{{ a.name }}</option>
-    </select>
+  <form [formGroup]="movieForm">
+    <section>
+      <input placeholder="title" type="text" formControlName="title"
+        [class.error]="submitted && movieForm.get('title')?.errors" />
+
+      <div
+        *ngIf="movieForm.controls['title'].invalid && (movieForm.controls['title'].dirty || movieForm.controls['title'].touched)"
+        class="text-error">
+        <label *ngIf="movieForm.controls['title'].hasError('required')">
+          * Title is required
+        </label>
+      </div>
+    </section>
+
+    <section>
+      <input placeholder="year" type="number" formControlName="year"
+        [class.error]="submitted && movieForm.get('year')?.errors" />
+    </section>
+
+    <section>
+      <select multiple placeholder="actors" formControlName="actors">
+        <option value="" disabled selected>Select actors</option>
+        <option *ngFor="let a of actors" [value]="a.name">{{ a.name }}</option>
+      </select>
+    </section>
     <button (click)="submit()" class="submit">Save!</button>
-    <button *ngif="data.movie?.id" (click)="delete()" class="submit">Delete!</button>
+    <button *ngIf="data.movie?.id" (click)="delete()" class="submit">Delete!</button>
+
   </form>
 </div>
